[project]
name = "strawberry-shorty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "ollama>=0.4.7",
    "plotly>=6.0.1",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
]
